# Ray-Tracer

./: .gitignore  .gitmodules  AABB.cpp  AABB.h  AmbientLight.cpp  AmbientLight.h  Camera.h  CheckerPlane.cpp  CheckerPlane.h  DirectionalLight.cpp  DirectionalLight.h  Hittable.h  HittableList.cpp  HittableList.h  Light.h  LightList.cpp  LightList.h  Makefile  OrthoCamera.cpp  OrthoCamera.h  PerspCamera.cpp  PerspCamera.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  README.md  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
mp1/: AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  CheckerPlane.cpp  CheckerPlane.h  DirectionalLight.cpp  DirectionalLight.h  Hittable.h  HittableList.cpp  HittableList.h  Image.cpp  Image.h  Light.h  LightList.cpp  LightList.h  Makefile  Pixel.cpp  Pixel.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp  vec3.h
mp1/include/: CMakeCache.txt  Light.h  Makefile  Plane.h  RayTracer.h  cmake_install.cmake
mp1/src/: DirectionalLight.cpp  RayTracer.cpp
mp2/: AABB.h  AmbientLight.cpp  HittableList.cpp  Image.cpp  Image.h  LightList.h  Plane.cpp  Ray.h  Sphere.h  main.cpp
